@@ -1,11 +1,12 @@
 package cat.touffu.management.components.projects.adapter;
 
 import cat.touffu.management.components.projects.domain.CardListId;
+import com.google.common.collect.Maps;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -13,10 +14,14 @@ class CardListIdAdapterTest {
 
     @Test
     void shouldParseListOfCardListId() {
-        List<CardListId> list = List.of(CardListId.of("id1"), CardListId.of("id2"), CardListId.of("id3"));
-        String json = "[\"id1\", \"id2\", \"id3\"]";
+        Set<CardListId> list = new HashSet<>(Arrays.asList(CardListId.of("id1"), CardListId.of("id2"), CardListId.of("id3")));
         CardListIdAdapter adapter = new CardListIdAdapter();
-        assertEquals(list.toString(), adapter.adapt(json).toString());
+        Set<CardListId> adapted = adapter.adapt("[\"id1\", \"id2\", \"id3\"]");
+        assertEquals(3, adapted.size());
+
+        List<String> expectedStringIds = list.stream().map(CardListId::value).collect(Collectors.toList());
+        List<String> actualStringIds = adapted.stream().map(CardListId::value).collect(Collectors.toList());
+        assertTrue(expectedStringIds.containsAll(actualStringIds) && actualStringIds.containsAll(expectedStringIds));
     }
 
 }
